only accept images, fix cropper js width and height

--- a/app/public/stylesheets/style.css
+++ b/app/public/stylesheets/style.css
@@ -99,6 +99,9 @@
     border-color: #eb9095;
 }
 
+#imgDiv img {
+    max-width: 100%;
+}
 
 /* Navigation */
 img.logo {
